--- a/styles.css
+++ b/styles.css
@@ -72,12 +72,11 @@ img.info-icons {
 }
 
 .flip-card-back {
-    background-color: black;
-    color: white;
+    background-image: url("https://www.transparenttextures.com/patterns/45-degree-fabric-light.png");
+    color: black;
     transform: rotateY(180deg);
     width: 100%;
     height: 15em;
-    border-radius: 15%;
     align-content: center;
 }
 
@@ -86,21 +85,6 @@ img.info-icons {
     height: 15em;
     border-radius: 15%;
 }
-
-#under_construction_thumbnail {
-    width: 100%;
-    height: 15em;
-    border-radius: 15%
-}
-
-.css_creature {
-    float: left;
-}
-
-.oop_challenge {
-    float: left;
-}
-
 
 p {
     font-size: 16pt;
